Fixing Hamburger Alignment Issue In Safari

--- a/core/static/css/v2/main.less
+++ b/core/static/css/v2/main.less
@@ -37,6 +37,7 @@
 
   .home-hamburger {
     color: #9d9d9d;
+    padding: 0px;
     &:hover {
       color: @primary-color;
     }
